# CSCE-441-Project-5

./: .gitignore  CMakeLists.txt  README.md  config.h  light.h  main.cpp  plane.cpp  plane.h  ray.h  ray_intersection.h  renderable.h  scene.cpp  scene.h  sphere.cpp  sphere.h  surface.h
docs/: project-guidelines.docx
